exports[`mcdoc parser > docComments > Parse '/// First line←↓/// Second line←↓Not comment←↓' 1`] = `
{
  "node": {
    "type": "mcdoc:doc_comments",
    "children": [
      {
        "type": "comment",
        "range": {
          "start": 0,
          "end": 16
        },
        "comment": " First line\\r\\n",
        "prefix": "///"
      },
      {
        "type": "comment",
        "range": {
          "start": 16,
          "end": 33
        },
        "comment": " Second line\\r\\n",
        "prefix": "///"
      }
    ],
    "range": {
      "start": 0,
      "end": 33
    }
  },
  "errors": [],
  "docCommentsText": "First line\\r\\nSecond line\\r\\n"
}
`;

exports[`mcdoc parser > docComments > Parse '/// First line↓/// Second line↓Not comment↓' 1`] = `
{
  "node": {
    "type": "mcdoc:doc_comments",
    "children": [
      {
        "type": "comment",
        "range": {
          "start": 0,
          "end": 15
        },
        "comment": " First line\\n",
        "prefix": "///"
      },
      {
        "type": "comment",
        "range": {
          "start": 15,
          "end": 31
        },
        "comment": " Second line\\n",
        "prefix": "///"
      }
    ],
    "range": {
      "start": 0,
      "end": 31
    }
  },
  "errors": [],
  "docCommentsText": "First line\\nSecond line\\n"
}
`;

exports[`mcdoc parser > docComments > Parse '/// First paragraph←↓///←↓/// Second paragraph←↓Not comment←↓' 1`] = `
{
  "node": {
    "type": "mcdoc:doc_comments",
    "children": [
      {
        "type": "comment",
        "range": {
          "start": 0,
          "end": 21
        },
        "comment": " First paragraph\\r\\n",
        "prefix": "///"
      },
      {
        "type": "comment",
        "range": {
          "start": 21,
          "end": 26
        },
        "comment": "\\r\\n",
        "prefix": "///"
      },
      {
        "type": "comment",
        "range": {
          "start": 26,
          "end": 48
        },
        "comment": " Second paragraph\\r\\n",
        "prefix": "///"
      }
    ],
    "range": {
      "start": 0,
      "end": 48
    }
  },
  "errors": [],
  "docCommentsText": "First paragraph\\r\\n\\r\\nSecond paragraph\\r\\n"
}
`;

exports[`mcdoc parser > docComments > Parse '/// First paragraph↓///↓/// Second paragraph↓Not comment↓' 1`] = `
{
  "node": {
    "type": "mcdoc:doc_comments",
    "children": [
      {
        "type": "comment",
        "range": {
          "start": 0,
          "end": 20
        },
        "comment": " First paragraph\\n",
        "prefix": "///"
      },
      {
        "type": "comment",
        "range": {
          "start": 20,
          "end": 24
        },
        "comment": "\\n",
        "prefix": "///"
      },
      {
        "type": "comment",
        "range": {
          "start": 24,
          "end": 45
        },
        "comment": " Second paragraph\\n",
        "prefix": "///"
      }
    ],
    "range": {
      "start": 0,
      "end": 45
    }
  },
  "errors": [],
  "docCommentsText": "First paragraph\\n\\nSecond paragraph\\n"
}
`;
